---------------------------------------------------------------------------------------------------
Version: 2.3.6
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.3.5
Date: 2025-06-06
  Bugfixes:
    - Fixed that rotated assembler with fluid input would not be handled properly in some cases.
    - Fixed that some entities may not be updated correctly after running sync map gen settings.
    - Add more checks against potential soft crashes on StageSelector.
---------------------------------------------------------------------------------------------------
Version: 2.3.3
Date: 2025-05-31
  Bugfixes:
    - Fix possible soft crash with StageSelector in some cases.
---------------------------------------------------------------------------------------------------
Version: 2.3.2
Date: 2025-04-12
  Bugfixes:
    - Fixed that mirroring/flipping assembling machines didn't work in some cases.
---------------------------------------------------------------------------------------------------
Version: 2.3.1
Date: 2025-03-06
  Bugfixes:
    - Fixed "setting map settings from set seed" did not set the correct seed.
---------------------------------------------------------------------------------------------------
Version: 2.3.0
Date: 2025-02-23
  Features:
    - Added "Deconstruct at next stage" mod setting. This makes the stage deconstruction tool deconstruct entities in the next stage, rather than the current stage.
    - Added button to set a project's map settings from a set-seed, on a given planet.
---------------------------------------------------------------------------------------------------
Version: 2.2.1
Date: 2025-01-30
  Bugfixes:
    - Fix that trains might jump around when interacted with when trains are moved from their original position.
---------------------------------------------------------------------------------------------------
Version: 2.2.0
Date: 2025-01-29